# TclPKCS11

./: Makefile  Makefile.in  README  autogen.sh  configure.ac  pkcs11t.h  pkgIndex.tcl.in  tclpkcs11.c  tclpkcs11.syms.in  tclpkcs11.vers  test.tcl  usage.txt
.fossil-settings/: ignore-glob
aclocal/: tcl.m4
